--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       // Simulation de la requête (remplace ceci par ta logique de serveur si nécessaire)
       setTimeout(() => {
         loading.style.display = "none"; // Cacher le message de chargement
-        alert("Connexion réussie (simulation).");
+        alert("Connexion réussie !");
         window.location.href = "verification.html";  // Rediriger vers la page de vérification
       }, 2000);
     }
