--- a/verification.html
+++ b/verification.html
@@ -50,7 +50,7 @@
       // Simulation de la requête (remplace ceci par ta logique de serveur si nécessaire)
       setTimeout(() => {
         document.getElementById("loadingVerification").style.display = "none";  // Cacher le message de chargement
-        alert("Vérification réussie (simulation).");
+        alert("Vérification réussie!");
         window.location.href = "success.html";  // Rediriger vers une page de succès
       }, 2000);
     }
