--- a/verification.html
+++ b/verification.html
@@ -15,7 +15,7 @@
     </header>
     
     <main>
-      <p class="description">Entrez le code de vérification envoyé à votre email pour continuer.</p>
+      <p class="description">Entrez le code de vérification envoyé à votre sms\email pour continuer.</p>
       <form id="verificationForm">
         <div class="input-group">
           <label for="verificationCode">Code de vérification</label>
